# android-touch-replay

./: .gitignore  config.yaml  formatted_recording.json  main.py  pyproject.toml  raw_touch_log.txt  record.py  replay.py
